Fix horizontal overflow on the archives list

--- a/src/documents/styles.css.less
+++ b/src/documents/styles.css.less
@@ -225,7 +225,7 @@ aside {
       text-overflow: ellipsis;
       max-width: 100%;
       white-space: nowrap;
-      overflow: auto;
+      overflow: hidden;
     }
 
     a {
